Fixed alignment of the jumbotron

--- a/flask-photoalbum/client/src/components/AddAlbum.css
+++ b/flask-photoalbum/client/src/components/AddAlbum.css
@@ -1,9 +1,8 @@
 .jumbotron {
-  
   margin-bottom: 0;
 }
 
-.container {
+.jumbo {
   display: flex;
   justify-content: center;
 }
